Bug 1303602 - Declare destructors of ref-counted classes private in code only compiled on Windows. r=jorgk